[gd_scene load_steps=11 format=2]

[ext_resource path="res://addons/canvas/scratch_drawer/line_2.png" type="Texture" id=1]
[ext_resource path="res://addons/canvas/scratch_drawer/line_0.png" type="Texture" id=2]
[ext_resource path="res://addons/canvas/scratch_drawer/line_1.png" type="Texture" id=3]
[ext_resource path="res://addons/canvas/scratch_drawer/line_4.png" type="Texture" id=4]
[ext_resource path="res://addons/canvas/scratch_drawer/line_5.png" type="Texture" id=5]
[ext_resource path="res://addons/canvas/scratch_drawer/Clear.png" type="Texture" id=6]
[ext_resource path="res://addons/canvas/scratch_drawer/line_3.png" type="Texture" id=7]
[ext_resource path="res://addons/canvas/canvas_optimized.tscn" type="PackedScene" id=8]
[ext_resource path="res://addons/canvas/scratch_drawer/scratch_drawer.gd" type="Script" id=9]

[sub_resource type="ButtonGroup" id=4]

[node name="ScratchDrawer" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_right = 118.0
margin_bottom = 600.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 111.0
margin_bottom = 593.0

[node name="Line" type="Button" parent="PanelContainer/VBoxContainer"]
margin_right = 104.0
margin_bottom = 22.0
toggle_mode = true
group = SubResource( 4 )
text = "line"
icon = ExtResource( 2 )

[node name="Rounded" type="Button" parent="PanelContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 104.0
margin_bottom = 48.0
toggle_mode = true
group = SubResource( 4 )
text = "rounded"
icon = ExtResource( 3 )

[node name="Thick" type="Button" parent="PanelContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 104.0
margin_bottom = 74.0
toggle_mode = true
group = SubResource( 4 )
text = "thick"
icon = ExtResource( 1 )

[node name="WidthCurve" type="Button" parent="PanelContainer/VBoxContainer"]
margin_top = 78.0
margin_right = 104.0
margin_bottom = 100.0
toggle_mode = true
group = SubResource( 4 )
text = "width curve"
icon = ExtResource( 7 )

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer"]
margin_top = 104.0
margin_right = 104.0
margin_bottom = 108.0

[node name="ColorPickerButton" type="ColorPickerButton" parent="PanelContainer/VBoxContainer"]
margin_top = 112.0
margin_right = 104.0
margin_bottom = 132.0
text = "clr"
color = Color( 0.156863, 0.156863, 0.196078, 1 )

[node name="Erase" type="CheckBox" parent="PanelContainer/VBoxContainer"]
margin_top = 136.0
margin_right = 104.0
margin_bottom = 160.0
text = "Erase"
icon = ExtResource( 6 )

[node name="Gradient" type="Button" parent="PanelContainer/VBoxContainer"]
margin_top = 164.0
margin_right = 104.0
margin_bottom = 186.0
toggle_mode = true
group = SubResource( 4 )
text = "gradient"
icon = ExtResource( 4 )

[node name="Rainbow" type="Button" parent="PanelContainer/VBoxContainer"]
margin_top = 190.0
margin_right = 104.0
margin_bottom = 212.0
toggle_mode = true
group = SubResource( 4 )
text = "rainbow"
icon = ExtResource( 5 )

[node name="CanvasOptimized" parent="." instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 122.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3

[connection signal="pressed" from="PanelContainer/VBoxContainer/Line" to="." method="_on_Line_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Rounded" to="." method="_on_Rounded_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Thick" to="." method="_on_Thick_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/WidthCurve" to="." method="_on_WidthCurve_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Gradient" to="." method="_on_Gradient_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Rainbow" to="." method="_on_Rainbow_pressed"]
[connection signal="drawing" from="CanvasOptimized" to="." method="_on_CanvasOptimized_drawing"]
